public/styles/style.css
:root {
    --grid-margin: 30px;
  }

body {
    padding: 0;
    margin: 0;
}

a, button {
    background-color: red;
    color: white;
    border-radius: 5px;
    padding: 10px 20px;
    border: none;
    font-weight: bold;
    text-decoration: none;
}

h1 {
    text-align: center;
}

#home {
    height: 100vh;
    background-image: url("/images/spotify-background.jpeg");
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
}

#home form {
    background-color: #ffffff88;
    height: 150px;
    width: 500px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

#home input {
    width: 50%;
    border: 1px solid gray;
    border-radius: 2px;
}

#list {
    display: flex;
    flex-wrap: wrap;
    padding-left: 10%;
    padding-right: 10%;
    margin-left: auto;
    margin-right: auto;
}

.item {
    margin: var(--grid-margin);
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: space-between; */
    width: calc((100% - 6 * var(--grid-margin))/3);
    background-color: grey;
    color: white;
    padding-bottom:  10px;
}


.item span {
    margin: 5px;
    font-weight: bold;
}

.item img {
    max-width: 100%;
    aspect-ratio: 1 / 1;
    /* max-height: 30%; */
}

#tracks-list {
    margin: 0px 15px;
}

#tracks-list-header {
    background-color: #4a4a4a;
    display: flex;
    justify-content:space-between;
    margin: 2px;
    padding: 20px 80px 20px 20px;
    color: lightgray;
    font-weight: bold;
    font-size: 2rem;

}

.track {
    display: flex;
    justify-content:space-between;
    align-items: center;
    background-color: rgb(240, 240, 240);
    margin: 2px;
    padding-left: 20px;
    /* width: 100%; */
}

.album-header {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 20px;
}

.album-header img {
    height: 200px;
}

.album-header p {
    margin: 0px;
}

